--- a/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
+++ b/src/app/seaimport/seaimportm/seaimportm-edit/seaimportm-edit.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-10">
     <div class="page-header">
       <h5>{{title}}</h5>
-      <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/seaexport/seaexportmEdit"
+      <button *ngIf="bAdd" class="btn btn-sm btn-success" routerLink="/seaimport/seaimportmEdit"
         [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
       <button class="btn btn-success btn-sm" (click)="return2Parent()">Return</button>
       <app-history [inputdata]="{table: 'cargo_masterm', id:id}"></app-history>
@@ -54,22 +54,7 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Sub-House</label>
-              <div class="col-sm-8">
-                <app-input maxlength="15" formControlName="mbl_sub_houseno" [case]="'UPPER'" id="mbl_sub_houseno"
-                  name="mbl_sub_houseno"></app-input>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Booking No</label>
-              <div class="col-sm-8">
-                <app-input maxlength="15" formControlName="mbl_liner_bookingno" [case]="'UPPER'"
-                  id="mbl_liner_bookingno" name="mbl_liner_bookingno"></app-input>
-              </div>
-            </div>
-
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Master Agent</label>
+              <label class="col-sm-4 form-label form-lable-sm" for="">Agent</label>
               <div class="col-sm-8">
                 <auto-complete formControlName="mbl_agent_name" id="mbl_agent_name" (CallBack)="callBack($event)"
                   [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
@@ -83,6 +68,15 @@
                 <auto-complete formControlName="mbl_liner_name" id="mbl_liner_name" (CallBack)="callBack($event)"
                   [table]="'param'" [subtable]="'sea carrier'" [company_id]="getCompanyId()" [url]="url"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]">
+                </auto-complete>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for="">Co-Loader</label>
+              <div class="col-sm-8">
+                <auto-complete formControlName="mbl_coloader_name" id="mbl_coloader_name" (CallBack)="callBack($event)"
+                  [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
+                  display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]">
                 </auto-complete>
               </div>
             </div>
@@ -123,20 +117,15 @@
                   [dataSource]="ShiptypeList" [valueColumn]="'key'" [displayColumn]="'value'"
                   case="UPPER"></app-combobox>
               </div>
-              <label class="form-label form-label-sm col-sm-2">Direct Shipment</label>
+              <label class="col-sm-2 form-label form-lable-sm">Inco.Term </label>
               <div class="col-sm-3">
-                <app-checkbox formControlName="mbl_direct"></app-checkbox>
-                <label class="ms-1 form-label form-label-sm">Yes/No</label>
+                <auto-complete formControlName="mbl_incoterm_name" id="mbl_incoterm_name" (CallBack)="callBack($event)"
+                  [table]="'param'" [subtable]="'vessel'" [company_id]="getCompanyId()" [url]="url"
+                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Place.Receipt</label>
-              <div class="col-sm-8">
-                <app-input maxlength="100" formControlName="mbl_place_delivery" [case]="'UPPER'"></app-input>
-              </div>
-            </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Pol</label>
               <div class="col-sm-3">
@@ -166,12 +155,10 @@
             </div>
 
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Port.Final</label>
-              <div class="col-sm-3">
-                <auto-complete formControlName="mbl_pofd_name" id="mbl_pofd_name" (CallBack)="callBack($event)"
-                  [table]="'param'" [subtable]="'sea-port'" [company_id]="getCompanyId()" [url]="url"
-                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
-              </div>
+                <label class="col-sm-4 form-label form-lable-sm" for="">Place.Receipt</label>
+                <div class="col-sm-3">
+                  <app-input maxlength="100" formControlName="mbl_place_delivery" [case]="'UPPER'"></app-input>
+                </div>
               <label class="col-sm-2 form-label form-lable-sm" for="">ETA</label>
               <div class="col-sm-3">
                 <app-date formControlName="mbl_pofd_eta" [format]="gs.globalConstants.global_date_format"
@@ -201,14 +188,106 @@
             </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm" for="">Voyage</label>
-              <div class="col-sm-3">
+              <div class="col-sm-8">
                 <app-input formControlName="mbl_voyage" id="mbl_voyage" name="mbl_voyage" case="UPPER" maxlength="50">
                 </app-input>
               </div>
-              <label class="col-sm-2 form-label form-lable-sm" for="">Book.SL#</label>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for="">MBL.Status</label>
               <div class="col-sm-3">
-                <app-input formControlName="mbl_book_slno" id="mbl_book_slno" name="mbl_book_slno" type="number">
-                </app-input>
+                <auto-complete formControlName="mbl_status_name" id="mbl_status_name" (CallBack)="callBack($event)"
+                  [table]="'param'" [subtable]="'vessel'" [company_id]="getCompanyId()" [url]="url"
+                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+              </div>
+            </div>
+
+
+
+
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for="">Cargo Location</label>
+              <div class="col-sm-3">
+                <auto-complete formControlName="mbl_cargo_loc_code" id="mbl_cargo_loc_code"
+                  (CallBack)="callBack($event)" [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
+                  display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]">
+                </auto-complete>
+              </div>
+              <div class="col-sm-5">
+                <app-input maxlength="100" formControlName="mbl_cargo_loc_name" id="mbl_cargo_loc_name"
+                  name="mbl_cargo_loc_name" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_cargo_loc_add1" [case]="'UPPER'" id="mbl_cargo_loc_add1"
+                  name="mbl_cargo_loc_add1"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_cargo_loc_add2" [case]="'UPPER'" id="mbl_cargo_loc_add2"
+                  name="mbl_cargo_loc_add2"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_cargo_loc_add3" [case]="'UPPER'" id="mbl_cargo_loc_add3"
+                  name="mbl_cargo_loc_add3"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_cargo_loc_add4" [case]="'UPPER'" id="mbl_cargo_loc_add4"
+                  name="mbl_cargo_loc_add4"></app-input>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for="">Devan Location</label>
+              <div class="col-sm-3">
+                <auto-complete formControlName="mbl_devan_loc_code" id="mbl_devan_loc_code"
+                  (CallBack)="callBack($event)" [table]="'customerm'" [company_id]="getCompanyId()" [url]="url"
+                  display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]">
+                </auto-complete>
+              </div>
+              <div class="col-sm-5">
+                <app-input maxlength="100" formControlName="mbl_devan_loc_name" id="mbl_devan_loc_name"
+                  name="mbl_devan_loc_name" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_devan_loc_add1" [case]="'UPPER'" id="mbl_devan_loc_add1"
+                  name="mbl_devan_loc_add1"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_devan_loc_add2" [case]="'UPPER'" id="mbl_devan_loc_add2"
+                  name="mbl_devan_loc_add2"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_devan_loc_add3" [case]="'UPPER'" id="mbl_devan_loc_add3"
+                  name="mbl_devan_loc_add3"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
+              <div class="col-sm-8">
+                <app-input maxlength="60" formControlName="mbl_devan_loc_add4" [case]="'UPPER'" id="mbl_devan_loc_add4"
+                  name="mbl_devan_loc_add4"></app-input>
               </div>
             </div>
           </div>
@@ -319,7 +398,7 @@
 
               <tbody formArrayName="master_house">
                 <tr *ngFor="let iRow of formArray('master_house').controls; let i=index;" [formGroupName]="i">
-                  <td align="centre" [routerLink]="['/seaexport/seaexporthEdit']"
+                  <td align="centre" [routerLink]="['/seaimport/seaimporthEdit']"
                     [queryParams]="{ id: iRow.get('hbl_id')?.value, mbl_id: mform.get('mbl_id')?.value, mode: 'edit',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }"
                     class="link"> <!--menuid: menuid, -->
                     <i class="fa fa-pencil"></i>
@@ -365,7 +444,7 @@
             </table>
             <div class="row" *ngIf=" mform.get('mbl_id')?.value != 0">
               <div class="col-md-12 text-center mb-2">
-                <button *ngIf="bAdd" class="btn btn-sm btn-info" type="button" routerLink="/seaexport/seaexporthEdit"
+                <button *ngIf="bAdd" class="btn btn-sm btn-info" type="button" routerLink="/seaimport/seaimporthEdit"
                   [queryParams]="{ id:0, mbl_id: mform.get('mbl_id')?.value, mode: 'add',menuid:'SEA-EXPORT-H', type: 'SEA-EXPORT-H', appid: appid }">
                   Add House</button>
               </div>
