--- a/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
+++ b/src/app/airimport/airimport/airimport-edit/airimport-edit.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-10">
       <div class="page-header">
         <h5>{{title}}</h5>
-        <button *ngIf="bAdd" class="btn btn-sm btn-success" type="button" routerLink="/airexport/airexportEdit"
+        <button *ngIf="bAdd" class="btn btn-sm btn-success" type="button" routerLink="/airimport/airimportEdit"
           [queryParams]="{id :0, _id:id+1,mode:'add',menuid:menuid,type:type,appid:appid}">New</button>
         <app-history [inputdata]="{table: 'cargo_masterm', id:id}"></app-history>
         <button class="btn btn-success btn-sm" type="button" (click)="return2Parent()">Return</button>
@@ -56,13 +56,6 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for="">Frt.Status</label>
-              <div class="col-sm-8">
-                <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
-                  formControlName="mbl_frt_status_name"></app-combobox>
-              </div>
-            </div>
-            <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">POL</label>
               <div class="col-sm-3">
                 <auto-complete formControlName="mbl_pol_name" name="mbl_pol_name" id="mbl_pol_name"
@@ -91,14 +84,46 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Country</label>
+              <label class="col-sm-4 form-label form-lable-sm">Cargo Location</label>
               <div class="col-sm-8">
-                <auto-complete formControlName="mbl_country_name" name="mbl_country_name" id="mbl_country_name"
-                  (CallBack)="callBack($event)" table="param" subtable="COUNTRY" [company_id]="getCompanyId()"
-                  [url]="url" case="upper"
-                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
+                <auto-complete formControlName="mbl_cargo_loc_code" name="mbl_cargo_loc_code" id="mbl_cargo_loc_code"
+                  (CallBack)="callBack($event)" table="customerm" [company_id]="getCompanyId()" [url]="url" case="upper"
+                  display_column="[{'caption':'CODE','value':'cust_code'},{'caption':'NAME','value':'cust_name'}]"></auto-complete>
               </div>
             </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Name</label>
+              <div class="col-sm-8">
+                <app-input maxlength="100" formControlName="mbl_cargo_loc_name" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm"></label>
+              <div class="col-sm-8">
+                <app-input maxlength="100" formControlName="mbl_cargo_loc_add1" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm"></label>
+              <div class="col-sm-8">
+                <app-input maxlength="100" formControlName="mbl_cargo_loc_add2" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm"></label>
+              <div class="col-sm-8">
+                <app-input maxlength="100" formControlName="mbl_cargo_loc_add3" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm"></label>
+              <div class="col-sm-8">
+                <app-input maxlength="100" formControlName="mbl_cargo_loc_add4" [case]="'UPPER'"></app-input>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-sm-6">
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">Carrier</label>
               <div class="col-sm-8">
@@ -109,78 +134,39 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">GrWt</label>
-              <div class="col-sm-3">
-                <app-input maxlength="100" formControlName="mbl_mawb_weight" type="number"
-                  [dec]="gs.globalConstants.global_dec_places"></app-input>
-              </div>
-              <label class="col-sm-2 form-label form-lable-sm">ChWt</label>
-              <div class="col-sm-3">
-                <app-input maxlength="100" formControlName="mbl_mawb_chwt" type="number"
-                  [dec]="gs.globalConstants.global_dec_places"></app-input>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">To</label>
-              <div class="col-sm-3">
-                <app-input maxlength="3" formControlName="mbl_to_port1" [case]="'UPPER'"></app-input>
-              </div>
-              <label class="col-sm-2 form-label form-lable-sm">By</label>
-              <div class="col-sm-3">
-                <app-input maxlength="3" formControlName="mbl_by_carrier1" [case]="'UPPER'"></app-input>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">To</label>
-              <div class="col-sm-3">
-                <app-input maxlength="3" formControlName="mbl_to_port2" [case]="'UPPER'"></app-input>
-              </div>
-              <label class="col-sm-2 form-label form-lable-sm">By</label>
-              <div class="col-sm-3">
-                <app-input maxlength="3" formControlName="mbl_by_carrier2" [case]="'UPPER'"></app-input>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">To</label>
-              <div class="col-sm-3">
-                <app-input maxlength="3" formControlName="mbl_to_port3" [case]="'UPPER'"></app-input>
-              </div>
-              <label class="col-sm-2 form-label form-lable-sm">By</label>
-              <div class="col-sm-3">
-                <app-input maxlength="3" formControlName="mbl_by_carrier3" [case]="'UPPER'"></app-input>
-              </div>
-            </div>
-            <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">Flight No</label>
-              <div class="col-sm-3">
+              <div class="col-sm-8">
                 <app-input maxlength="15" formControlName="mbl_vessel_name" [case]="'UPPER'"></app-input>
               </div>
-              <label class="col-sm-2 form-label form-lable-sm">Flight No</label>
-              <div class="col-sm-3">
-                <app-input maxlength="15" formControlName="mbl_voyage" [case]="'UPPER'"></app-input>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm" for="">Frt.Status</label>
+              <div class="col-sm-8">
+                <app-combobox [dataSource]="dataList" [valueColumn]="'key'" [displayColumn]="'value'"
+                  formControlName="mbl_frt_status_name"></app-combobox>
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm">Currency</label>
-              <div class="col-sm-3">
-                <auto-complete formControlName="mbl_currency_code" name="mbl_currency_code" id="mbl_currency_code"
-                  (CallBack)="callBack($event)" table="param" subtable="CURRENCY" [company_id]="getCompanyId()"
+              <label class="col-sm-4 form-label form-lable-sm">Origin.Country</label>
+              <div class="col-sm-8">
+                <auto-complete formControlName="mbl_country_name" name="mbl_country_name" id="mbl_country_name"
+                  (CallBack)="callBack($event)" table="param" subtable="COUNTRY" [company_id]="getCompanyId()"
                   [url]="url" case="upper"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
             </div>
             <div class="form-group row">
               <label class="col-sm-4 form-label form-lable-sm">Handled By</label>
-              <div class="col-sm-3">
+              <div class="col-sm-8">
                 <auto-complete formControlName="mbl_handled_name" name="mbl_handled_name" id="mbl_handled_name"
                   (CallBack)="callBack($event)" table="param" subtable="SALESMAN" [company_id]="getCompanyId()"
                   [url]="url" case="upper"
                   display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
-              <label class="col-sm-2 form-label form-lable-sm">Salesman</label>
-              <div class="col-sm-3">
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">Salesman</label>
+              <div class="col-sm-8">
                 <auto-complete formControlName="mbl_salesman_name" name="mbl_salesman_name" id="mbl_salesman_name"
                   (CallBack)="callBack($event)" table="param" subtable="SALESMAN" [company_id]="getCompanyId()"
                   [url]="url" case="upper"
@@ -188,15 +174,26 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-sm-4 form-label form-lable-sm" for=""></label>
-              <div class="col-sm-3">
-                <app-checkbox formControlName="mbl_3rdparty"></app-checkbox>
-                <label class="ms-1 form-label form-label-sm">3rd Party Booking</label>
+              <label class="col-sm-4 form-label form-lable-sm" for="">Inco Term</label>
+              <div class="col-sm-8">
+                <auto-complete formControlName="mbl_incoterm" name="mbl_incoterm" id="mbl_incoterm"
+                  (CallBack)="callBack($event)" table="param" subtable="INCOTERM" [company_id]="getCompanyId()"
+                  [url]="url" case="upper"
+                  display_column="[{'caption':'CODE','value':'param_code'},{'caption':'NAME','value':'param_name'}]"></auto-complete>
               </div>
-              <label class="col-sm-2 form-label form-lable-sm" for=""></label>
-              <div class="col-sm-3">
-                <app-checkbox formControlName="mbl_direct"></app-checkbox>
-                <label class="ms-1 form-label form-label-sm">Direct Shipment</label>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">GrWt</label>
+              <div class="col-sm-8">
+                <app-input formControlName="mbl_mawb_weight" type="number"
+                  [dec]="gs.globalConstants.global_dec_places"></app-input>
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4 form-label form-lable-sm">ChWt</label>
+              <div class="col-sm-8">
+                <app-input formControlName="mbl_mawb_chwt" type="number"
+                  [dec]="gs.globalConstants.global_dec_places"></app-input>
               </div>
             </div>
           </div>
@@ -222,10 +219,10 @@
                   <th>DELETE</th>
                 </tr>
               </thead>
-              <tbody formArrayName="air_export">
-                <tr *ngFor="let iRow of formArray('air_export').controls; let i=index;" [formGroupName]="i">
-                  <td align="centre" class="link" routerLink="/airexport/airexporthEdit"
-                    [queryParams]="{id :iRow.get('hbl_id')?.value ,mode:'edit',menuid:'AIREXPORTH',type:'AIREXPORTH',appid:appid,mbl_id:mform.get('mbl_id')?.value}">
+              <tbody formArrayName="air_import">
+                <tr *ngFor="let iRow of formArray('air_import').controls; let i=index;" [formGroupName]="i">
+                  <td align="centre" class="link" routerLink="/airimport/airimporthEdit"
+                    [queryParams]="{id :iRow.get('hbl_id')?.value ,mode:'edit',menuid:'AIRIMPORTH',type:'AIRIMPORTH',appid:appid,mbl_id:mform.get('mbl_id')?.value}">
                     <!-- (click)="editdetails(i)"  -->
                     <i class="fa fa-pencil"></i>
                   </td>
@@ -264,7 +261,7 @@
                   </td>
 
                   <td>
-                    <label>{{iRow.get('hbl_date')?.value}}</label>
+                    <label>{{iRow.get('rec_created_date')?.value}}</label>
                   </td>
 
                   <td align="centre" (click)="deleteRow(i,iRow.get('hbl_houseno')?.value,iRow.get('hbl_id')?.value)"
@@ -279,9 +276,9 @@
         <div class="page-footer line-bottom">
           <div class="row">
             <div class="col-sm-12" *ngIf="mode=='edit'">
-              <button class="btn btn-sm btn-success" *ngIf="{mode:'add'}" routerLink="/airexport/airexporthEdit"
+              <button class="btn btn-sm btn-success" *ngIf="{mode:'add'}" routerLink="/airimport/airimporthEdit"
                 type="button"
-                [queryParams]="{id : 0 ,mode:'add', menuid:'AIREXPORTH', type:'AIREXPORTH', appid: appid, mbl_id: mform.get('mbl_id')?.value}">Add
+                [queryParams]="{id : 0 ,mode:'add', menuid:'AIRIMPORTH', type:'AIRIMPORTH', appid: appid, mbl_id: mform.get('mbl_id')?.value}">Add
                 House</button>
             </div>
           </div>
